# replicated-store

./: .gitignore  README.MD  TODO.org  batch.sh  messages.proto  services.proto
c++/: .bazelrc  BUILD  CMakeLists.txt  Makefile  README.MD  TODO.txt  WORKSPACE  client.cc  client.h  client_manager.cc  client_manager.h  command.cc  command.h  config.json  consensus.h  doc-v2.org  doc-vfj.org  doc.org  instance.cc  instance.h  joiner.h  kvstore.cc  kvstore.h  log.cc  log.h  log_test.cc  main.cc  memkvstore.cc  memkvstore.h  memkvstore_test.cc  memstore.cc  memstore.h  multipaxos.cc  multipaxos.h  multipaxos.proto  multipaxos_test.cc  multipaxosrpc.cc  multipaxosrpc.h  multipaxosrpc.proto  paxos.cc  (+16 more)
c++-tcp/: BUILD  WORKSPACE  client.cc  client.h  client_manager.cc  client_manager.h  config.json  kvstore.cc  kvstore.h  log.cc  log.h  log_test.cc  memkvstore.cc  memkvstore.h  memkvstore_test.cc  msg.h  multipaxos.cc  multipaxos.h  multipaxos_test.cc  peer_server.cc  peer_server.h  replicant.cc  replicant.h  replicant_test.cc  tcp.cc  tcp.h  test_util.cc  test_util.h
c++-tcp/dependency/: BUILD
design-doc/: client.org  client_manager.org  log.org  multipaxos.org  paxos.org  replicant.org
design-doc/grpc/: log.org  replicant.org
design-doc/tcp/: client-tcp.org  client_manager-tcp.org  multipaxos-tcp.org  replicant-tcp.org
go/: go.mod  go.sum  multipaxosrpc.proto
go-grpc/: README.MD  go.mod  go.sum  multipaxosrpc.proto
go-grpc/config/: config.go  config.json
go-grpc/kvstore/: kvstore.go  memkvstore.go  memkvstore_test.go  rocksdbstore
go-grpc/latencymap/: latency_map.go
go-grpc/log/: log.go  log_test.go  queue.go
go-grpc/main/: main.go
go-grpc/multipaxos/: multipaxos.go  multipaxos_test.go  overloaded_detector.go  queue.go  util.go
go-grpc/replicant/: client.go  client_manager.go  queue.go  replicant.go
go-grpc/util/: test_util.go
go-tcp/: README.MD  multipaxosrpc.proto
go-tcp/config/: config.json
go-tcp/kvstore/: memkvstore_test.go
go-tcp/log/: log.go  log_test.go
go-tcp/main/: main.go
go-tcp/multipaxos/: multipaxos.go  multipaxos_test.go  util.go
go-tcp/multipaxos/network/: msg.go  tcp.go
go-tcp/replicant/: client.go  client_manager.go  replicant.go
go-tcp/util/: test_util.go
go/command/: command.go  op.go
go/config/: config.go
go/consensus/multipaxos/: msg.go  multipaxos.go  multipaxos_test.go
go/consensus/multipaxos/util/: test_util.go
go/instance/: instance.go
go/kvstore/: kvstore.go  memkvstore.go  rocksdbstore.go
go/log/: log.go  log_test.go
go/main/: main.go
go/multipaxos/: multipaxos.go  multipaxos_test.go  util.go
go/multipaxos/network/: msg.go  tcp.go
go/operation/: op.go
go/paxos/: paxos.go
go/reactor/: client.go  reactor.go  test_test.go
go/replicant/: client.go  client_manager.go  replicant.go  test_test.go
go/store/: kvstore.go  memkvstore.go  memkvstore_test.go
java/: .gitignore  README.MD  run.md
java-tcp/replicant/: pom.xml
java-tcp/replicant/src/main/java/command/: Command.java
java-tcp/replicant/src/main/java/kvstore/: KVStore.java
java-tcp/replicant/src/main/java/log/: Instance.java  Log.java
java-tcp/replicant/src/main/java/multipaxos/: MultiPaxos.java  MultiPaxosResultType.java  Result.java
java-tcp/replicant/src/main/java/replicant/: Client.java  ClientManager.java  Replicant.java
java-tcp/replicant/src/main/resources/: logback.xml
java-tcp/replicant/src/test/java/kvstore/: MemKVStoreTest.java
java-tcp/replicant/src/test/java/multipaxos/: MultiPaxosTest.java
java-tcp/replicant/src/test/java/util/: TestUtil.java
java/replicant/: pom.xml
java/replicant/src/main/java/: ReplicantMain.java
java/replicant/src/main/java/command/: Command.java  KVResult.java
java/replicant/src/main/java/kvstore/: KVStore.java  RocksDBStore.java
java/replicant/src/main/java/log/: Instance.java  InstanceWithCv.java  Log.java
java/replicant/src/main/java/multipaxos/: Configuration.java  DummyPaxos.java  MultiPaxos.java
java/replicant/src/main/java/paxos/: Configuration.java  DummyPaxos.java  MultiPaxos.java
java/replicant/src/main/java/replicant/: Client.java  ClientHandler.java  ClientManager.java  Replicant.java
java/replicant/src/main/proto/: multipaxos.proto
java/replicant/src/main/resources/: logback.xml
java/replicant/src/test/java/log/: LogTest.java
java/replicant/src/test/java/multipaxos/: MultiPaxosTest.java
java/replicant/src/test/java/replicant/: ReplicantTest.java
java/replicant/src/test/java/util/: TestUtil.java
java/replicator/: pom.xml
java/replicator/src/main/java/: ReplicatorMain.java
java/replicator/src/main/java/command/: Command.java  CommandResult.java  Result.java
java/replicator/src/main/java/heartbeat/: HeartBeatScheduler.java
java/replicator/src/main/java/kvstore/: KVStore.java  (+2 more)
java/replicator/src/main/proto/: multipaxos.proto  multipaxosrpc.proto
microbenchmarks/c++/: .bazelrc  BUILD  WORKSPACE  greeter_client.cc  greeter_server.cc
microbenchmarks/c++/examples/: BUILD
microbenchmarks/go/: go.mod  go.sum
microbenchmarks/go/client/: main.go
microbenchmarks/go/server/: main.go
rust/: README.MD
rust-grpc/replicant/: Cargo.toml  build.rs
rust-grpc/replicant/src/: main.rs
rust-grpc/replicant/src/replicant/kvstore/: rocksdbstore.rs
rust-tcp/replicant/: Cargo.toml
rust-tcp/replicant/src/replicant/: mod.rs
rust-tcp/replicant/src/replicant/kvstore/: memkvstore.rs  mod.rs
rust-tcp/replicant/src/replicant/log/: mod.rs
rust/replicant/: Cargo.toml
rust/replicant/src/: log.rs  main.rs  replicant.rs
rust/replicant/src/consensus/: dummy_paxos.rs  mod.rs  traits.rs
rust/replicant/src/kvstore/: command.rs  memkvstore.rs  memstore.rs  mod.rs  traits.rs
rust/replicant/src/log/: mod.rs
rust/replicant/src/multipaxos/: mod.rs
rust/replicant/src/replicant/: mod.rs
rust/replicant/src/replicant/client_manager/: mod.rs
rust/replicant/src/replicant/kvstore/: memkvstore.rs  mod.rs
rust/replicant/src/replicant/log/: mod.rs
rust/replicant/src/replicant/multipaxos/: mod.rs  msg.rs  tcp.rs
utils/: batch.sh
(+51 files in other folders)
