[package]
name = "replicant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.4"
futures-util = "0.3"
futures = "0.3"
prost = "0.11"
rand = "0.8.5"
serde_json = "1.0"
serial_test = "*"
tonic = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
