[package]
name = "replicant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
log = "0.4.0"
env_logger = "0.8.4"
futures-util = "0.3"
futures = "0.3"
parking_lot = "0.12.0"
prost = "0.11"
rand = "0.8.5"
serde_json = "1.0"
serial_test = "*"
tonic = "0.8"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.8"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
